--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
 	    "bin/gendiff"
     ],
     "autoload": {
+        "files": [
+            "src/Differ.php"
+        ],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
         }
