--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     },
     "require": {
         "docopt/docopt": "^1.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.6"
     }
 }
