--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,16 @@
     ],
     "autoload": {
         "files": [
-            "src/Differ.php"
+            "src/Differ.php",
+            "src/Parsers.php"
         ],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
         }
     },
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "symfony/yaml": "^5.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6",
