--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "autoload": {
         "files": [
             "src/Differ.php",
-            "src/Parsers.php"
+            "src/Parsers.php",
+            "src/Stylish.php",
+            "src/Format.php"
         ],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
