--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "files": [
             "src/Differ.php",
             "src/Parsers.php",
-            "src/Stylish.php",
-            "src/Format.php"
+            "src/formatters/Stylish.php",
+            "src/Formatters.php",
+            "src/formatters/Plain.php"
         ],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
@@ -19,7 +20,8 @@
     },
     "require": {
         "docopt/docopt": "^1.0",
-        "symfony/yaml": "^5.3"
+        "symfony/yaml": "^5.3",
+        "funct/funct": "^1.5"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6",
