--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "docopt/docopt": "^1.0",
         "symfony/yaml": "^5.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "lstrojny/functional-php": "^1.17"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6",
