--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "lstrojny/functional-php": "^1.17"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.6",
+        "squizlabs/php_codesniffer": "*",
         "phpunit/phpunit": "^9.5"
     }
 }
