--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "*",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "*"
     }
 }
