--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "lstrojny/functional-php": "^1.17"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "*",
+        "squizlabs/php_codesniffer": "3.*",
         "phpunit/phpunit": "*"
     }
 }
