--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "^8"
     }
 }
